--- a/css/main.scss
+++ b/css/main.scss
@@ -34,8 +34,10 @@
 // }
 
 // variables.less
-$theme-primary: #F05F40;
-$theme-dark: #222;
+$theme-primary: #{{ site.color.primary }};
+$theme-secondary: #{{ site.color.secondary }};
+$theme-dark: #{{ site.color.secondary-dark }};
+$header-image: '../{{ site.header-image }}';
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
