--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,23 +1,23 @@
-<section class="no-padding" id="portfolio">
+<section class="no-padding" id="team">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Laboratories</h2>
+                <h2 class="section-heading">Team</h2>
                 <hr class="primary">
             </div>
         </div>
         <div class="row no-gutter">
-            {% for project in site.projects %}
-            <div class="col-lg-4 col-sm-6">
-                <a href="{{ project.url }}" class="portfolio-box">
-                    <img src="img/portfolio/{{ project.img }}" class="img-responsive" alt="{{ project.name }}">
+            {% for person in site.team %}
+            <div class="col-sm-1">
+                <a href="{{ person.url }}" class="portfolio-box">
+                    <img src="img/team/{{ person.img }}" class="img-responsive" alt="{{ person.name }}">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                {{ project.name }}
+                                {{ person.name }}
                             </div>
                             <div class="project-category text-faded">
-                                {{ project.area }}
+                                {{ person.role }}
                             </div>
                         </div>
                     </div>
