--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -11,6 +11,7 @@
   {% include portfolio.html %}
   {% include news.html %}
   {% include partners.html %}
+  {% include team.html %}
   {% include contact.html %}
   {% include scripts.html %}
 </body>
