Grayscale team images

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -10,7 +10,7 @@
             {% for person in site.team %}
             <div class="col-sm-1">
                 <a href="{{ person.url }}" class="portfolio-box">
-                    <img src="img/team/{{ person.img }}" class="img-responsive" alt="{{ person.name }}">
+                    <img src="img/team/{{ person.img }}" class="img-responsive img-profile" alt="{{ person.name }}" height="300px">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
