Fix grid sizes for small devices

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,9 +6,9 @@
         </div>
         <div class="row">
             {% for network in site.social %}
-            <div class="col-sm-4 text-center">
+            <div class="col-xs-4 text-center">
                 <a href="{{ network.url }}">
-                    <i class="fa fa-{{ network.title }} fa-3x wow bounceIn" style="color:white;" data-wow-delay=".1s"></i>
+                    <i class="fa fa-{{ network.title }} fa-2x wow bounceIn" style="color:white;" data-wow-delay=".1s"></i>
                 </a>
             </div>
             {% endfor %}
