--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -167,7 +167,7 @@ header {
     .header-content {
         position: relative;
         text-align: center;
-        padding: 100px 15px 100px;
+        padding: 25% 15px 25%;
         width: 100%;
         .header-content-inner {
             h1 {
