--- a/_includes/team.html
+++ b/_includes/team.html
@@ -8,7 +8,7 @@
         </div>
         <div class="row no-gutter">
             {% for person in site.team %}
-            <div class="col-sm-1">
+            <div class="col-lg-1 col-md-2 col-xs-3">
                 <a href="{{ person.url }}" class="portfolio-box">
                     <img src="img/team/{{ person.img }}" class="img-responsive img-profile" alt="{{ person.name }}" height="300px">
                     <div class="portfolio-box-caption">
