--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -219,9 +219,9 @@ header {
 
 .service-box {
     max-width: 400px;
-    margin: 50px auto 0;
+    margin: 50px auto 50px;
     @media (min-width: 992px) {
-        margin: 20px auto 0;
+        margin: 20px auto 20px;
     }
     p {
         margin-bottom: 0;
