--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,16 @@
                     <a class="page-scroll" href="#services">Research</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#portfolio">Laboratories</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#news">News</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#team">Partners</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#team">Team</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
