Testing new logo and favicon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#4c3b71">
     <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
-    <meta name="theme-color" content="#4c3b71">
+    <meta name="theme-color" content="#ffffff">
 
     <title>{{ site.title }}</title>
 
