--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">{{ site.title }}</a>
+            <a class="navbar-brand page-scroll" href="#page-top">
+                <img height="35px" src="img/logos/mise-color.svg" alt="{{ site.title }}"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
