Fix partners section in nav bar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,7 +28,7 @@
                     <a class="page-scroll" href="#news">News</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#team">Partners</a>
+                    <a class="page-scroll" href="#partners">Partners</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#team">Team</a>
