--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -1,4 +1,4 @@
-<section id="partenrs">
+<section id="partners">
     <div class="container">
         <div class="row text-center">
             <h2 class="section-heading">Partners</h2>
