--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -365,3 +365,14 @@ body {
 .img-profile {
     filter: grayscale(80%);
 }
+
+header .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: $theme-secondary;
+    opacity: 0.3;
+    z-index: 0;
+}
