--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <header>
+    <div class="overlay"></div>
     <div class="header-content">
         <div class="header-content-inner">
             <h1>{{ site.title }}</h1>
