Randomize laboratories, teams, and partners

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -4,7 +4,7 @@
             <h2 class="section-heading">Partners</h2>
             <hr class="primary">
         </div>
-        <div class="row">
+        <div class="row" id="partners-grid">
             {% for p in site.partners %}
             <div class="col-sm-3 text-center">
                 <a href="{{ p.url }}">
