--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -11,3 +11,11 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="js/creative.js"></script>
+
+<!-- Shuffle sections -->
+<script src="js/shuffle.js"></script>
+<script>
+    $('#portfolio-grid').shuffle();
+    $('#partners-grid').shuffle();
+    $('#team-grid').shuffle();
+</script>
