--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -6,7 +6,7 @@
                 <hr class="primary">
             </div>
         </div>
-        <div class="row no-gutter">
+        <div class="row no-gutter" id="portfolio-grid">
             {% for project in site.projects %}
             <div class="col-lg-4 col-sm-6">
                 <a href="{{ project.url }}" class="portfolio-box">
