--- a/_includes/team.html
+++ b/_includes/team.html
@@ -6,7 +6,7 @@
                 <hr class="primary">
             </div>
         </div>
-        <div class="row no-gutter">
+        <div class="row no-gutter" id="team-grid">
             {% for person in site.team %}
             <div class="col-lg-1 col-md-2 col-xs-3">
                 <a href="{{ person.url }}" class="portfolio-box">
