--- a/_includes/team.html
+++ b/_includes/team.html
@@ -13,11 +13,14 @@
                     <img src="img/team/{{ person.img }}" class="img-responsive img-profile" alt="{{ person.name }}" height="300px">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-name">
+                            <div class="project-name team-name">
                                 {{ person.name }}
                             </div>
-                            <div class="project-category text-faded">
+                            <div class="project-category team-role text-faded">
                                 {{ person.role }}
+                            </div>
+                            <div class="project-category team-role text-bold">
+                                {{ person.afiliation }}
                             </div>
                         </div>
                     </div>
