SPEL Site draft

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">
-                <img height="35px" src="img/logos/mise-color.svg" alt="{{ site.title }}"></a>
+                <img height="35px" src="{{ site.logo }}" alt="{{ site.title }}"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -22,7 +22,7 @@
                     <a class="page-scroll" href="#services">Research</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Laboratories</a>
+                    <a class="page-scroll" href="#portfolio">Projects</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#news">News</a>
