--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -384,7 +384,7 @@ header .overlay {
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: $theme-secondary;
+    background-color: #115268;
     opacity: 0.3;
     z-index: 0;
 }
