--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -263,11 +263,12 @@ header {
                 padding: 0 15px;
             }
             .project-category {
-                text-transform: uppercase;
+                //text-transform: uppercase;
                 font-weight: 600;
-                font-size: 14px;
+                font-size: 11px;
             }
             .project-name {
+                text-transform: uppercase;
                 font-size: 18px;
             }
             .team-role{
