--- a/_includes/team.html
+++ b/_includes/team.html
@@ -10,17 +10,17 @@
             {% for person in site.team %}
             <div class="col-lg-1 col-md-2 col-xs-3">
                 <a href="{{ person.url }}" class="portfolio-box">
-                    <img src="img/team/{{ person.img }}" class="img-responsive img-profile" alt="{{ person.name }}" height="300px">
+                    <img src="img/team/{{ person.img }}" class="img-responsive" alt="{{ person.name }}" height="300px">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name team-name">
                                 {{ person.name }}
                             </div>
                             <div class="project-category team-role text-faded">
-                                {{ person.role }}
+                                {{ person.degree }}
                             </div>
                             <div class="project-category team-role text-bold">
-                                {{ person.afiliation }}
+                                {{ person.role }}
                             </div>
                         </div>
                     </div>
