--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,13 @@
     <div class="header-content">
         <div class="header-content-inner">
             <h1>{{ site.title }}</h1>
-            <hr>
+            <hr class="light">
             <h3>{{ site.subtitle }}</h3>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <div></div>
+            <a href="#about" class="btn btn-default btn-xl page-scroll" style="margin-top: 20px">Find Out More</a>
         </div>
+    </div>
+    <div>
+        <small>{{ site.header-image.attrib }}</small>
     </div>
 </header>
