--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -173,12 +173,12 @@ header {
     .header-content {
         position: relative;
         text-align: center;
-        padding: 25% 15px 25%;
+        padding: 35vh 15px 35vh;
         width: 100%;
         .header-content-inner {
             h1 {
                 font-weight: 700;
-                text-transform: uppercase;
+                text-transform: uppercase;;
                 margin-top: 0;
                 margin-bottom: 0;
             }
