--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -178,7 +178,7 @@ header {
         .header-content-inner {
             h1 {
                 font-weight: 700;
-                text-transform: uppercase;;
+                text-transform: uppercase;
                 margin-top: 0;
                 margin-bottom: 0;
             }
