--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -6,7 +6,7 @@
         </div>
         <div class="row" id="partners-grid">
             {% for p in site.partners %}
-            <div class="col-sm-3 text-center">
+            <div class="col-sm-3 text-center" style="padding: 10px" title="{{ p.name }}">
                 <a href="{{ p.url }}">
                     {% if p.logo %}
                     <img src="img/logos/{{ p.logo }}" alt="{{ p.name }}" height="100px">
