--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -12,6 +12,7 @@
   {% include news.html %}
   {% include partners.html %}
   {% include team.html %}
+  {% include alumni.html %}
   {% include contact.html %}
   {% include scripts.html %}
 </body>
