--- a/_includes/alumni.html
+++ b/_includes/alumni.html
@@ -2,24 +2,24 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Alumni</h2>
+                <h2 class="section-heading">alumni</h2>
                 <hr class="primary">
             </div>
         </div>
         <div class="row no-gutter" id="alumni-grid">
-            {% for person in site.team %}
+            {% for person in site.alumni %}
             <div class="col-lg-1 col-md-2 col-xs-3">
                 <a href="{{ person.url }}" class="portfolio-box">
                     <img src="img/team/{{ person.img }}" class="img-responsive" alt="{{ person.name }}" height="300px">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-name team-name">
+                            <div class="project-name alumni-name">
                                 {{ person.name }}
                             </div>
-                            <div class="project-category team-role text-faded">
+                            <div class="project-category alumni-role text-faded">
                                 {{ person.degree }}
                             </div>
-                            <div class="project-category team-role text-bold">
+                            <div class="project-category alumni-role text-bold">
                                 {{ person.role }}
                             </div>
                         </div>
