--- a/_includes/alumni.html
+++ b/_includes/alumni.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">alumni</h2>
+                <h2 class="section-heading">Alumni</h2>
                 <hr class="primary">
             </div>
         </div>
