--- a/_includes/alumni.html
+++ b/_includes/alumni.html
@@ -1,4 +1,4 @@
-<section class="no-padding" id="alumni">
+<section id="alumni">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 text-center">
