--- a/_includes/alumni.html
+++ b/_includes/alumni.html
@@ -13,13 +13,13 @@
                     <img src="img/team/{{ alumnus.img }}" class="img-responsive" alt="{{ alumnus.name }}" height="300px">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-name alumni-name">
+                            <div class="project-name team-name">
                                 {{ alumnus.name }}
                             </div>
-                            <div class="project-category alumni-role text-faded">
+                            <div class="project-category team-role text-faded">
                                 {{ alumnus.degree }}
                             </div>
-                            <div class="project-category alumni-role text-bold">
+                            <div class="project-category team-role text-bold">
                                 {{ alumnus.role }}
                             </div>
                         </div>
