--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,6 +7,7 @@
   {% include nav.html %}
   {% include header.html %}
   {% include about.html %}
+  {% include carousel.html %}
   {% include research.html %}
   {% include portfolio.html %}
   {% include news.html %}
