--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,6 +3,9 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
+<script>
+    $('.carousel').carousel();
+</script>
 
 <!-- Plugin JavaScript -->
 <script src="js/jquery.easing.min.js"></script>
@@ -18,4 +21,5 @@
     $('#portfolio-grid').shuffle();
     $('#partners-grid').shuffle();
     $('#team-grid').shuffle();
+    $('#alumni-grid').shuffle();
 </script>
