--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,7 +5,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script>
-    $('.carousel').carousel();
+    $('#excarousel').carousel();
 </script>
 
 <!-- Plugin JavaScript -->
