--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -13,10 +13,10 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="img_chania.jpg" alt="Chania" width="460" height="345">
+        <img src="img/constelacion-UCH.jpg" alt="constelation" width="460" height="345">
         <div class="carousel-caption">
-          <h3>Chania</h3>
-          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+          <h3>Satellite Constellation</h3>
+          <p>SUCHAI-2, SUCHAI-3 and PlantSat.</p>
         </div>
       </div>
 
