--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -13,7 +13,7 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="img/constelacion-UCH.jpg" alt="constelation" width="460" height="345">
+        <img src="img/constelacion-UCH.jpg" class="img-responsive" alt="constelation" width="460" height="345">
         <div class="carousel-caption">
           <h3>Satellite Constellation</h3>
           <p>SUCHAI-2, SUCHAI-3 and PlantSat.</p>
@@ -21,7 +21,7 @@
       </div>
 
       <div class="item">
-        <img src="img_chania2.jpg" alt="Chania" width="460" height="345">
+        <img src="img_chania2.jpg" class="img-responsive" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -29,18 +29,18 @@
       </div>
     
       <div class="item">
-        <img src="img_flower.jpg" alt="Flower" width="460" height="345">
+        <img src="FEMTO.jpg" class="img-responsive" alt="FEMTO" width="460" height="345">
         <div class="carousel-caption">
-          <h3>Flowers</h3>
-          <p>Beautiful flowers in Kolymbari, Crete.</p>
+          <h3>FEMTO Satellite</h3>
+          <p>A Small Satellite under 100 gr</p>
         </div>
       </div>
 
       <div class="item">
-        <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
+        <img src="Sunphotometer.jpg" class="img-responsive" alt="Sun Photometer" width="460" height="345">
         <div class="carousel-caption">
-          <h3>Flowers</h3>
-          <p>Beautiful flowers in Kolymbari, Crete.</p>
+          <h3>Automated Sun Photometer</h3>
+          <p>Stidies of urban aerosols using a sensor network</p>
         </div>
       </div>
   
