--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -21,10 +21,10 @@
       </div>
 
       <div class="item">
-        <img src="img_chania2.jpg" class="img-responsive" alt="Chania" height="345">
+        <img src="img/fotometro.jpg" class="img-responsive" alt="Chania" height="345">
         <div class="carousel-caption">
-          <h3>Chania</h3>
-          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+          <h3>Sun Photometer</h3>
+          <p>Automated Low-Cost Sun Photometer Network for Urban Aerosol Characterization.</p>
         </div>
       </div>
     
