--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="item">
-        <img src="img/fotometro.jpg" class="img-responsive" alt="Chania" height="345">
+        <img src="img/fotometro.jpg" class="img-responsive" alt="fotometro" height="345">
         <div class="carousel-caption">
           <h3>Sun Photometer</h3>
           <p>Automated Low-Cost Sun Photometer Network for Urban Aerosol Characterization.</p>
