--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -14,6 +14,8 @@
   {% include partners.html %}
   {% include team.html %}
   {% include alumni.html %}
+  {% Publications.html %}
+  {% Thesis.html %}
   {% include contact.html %}
   {% include scripts.html %}
 </body>
