--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -14,8 +14,8 @@
   {% include partners.html %}
   {% include team.html %}
   {% include alumni.html %}
-  {% Publications.html %}
-  {% Thesis.html %}
+  {% publications.html %}
+  {% thesis.html %}
   {% include contact.html %}
   {% include scripts.html %}
 </body>
