--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,4 +1,4 @@
-<section class="bg-secondary" id="about">
+<section class="bg-secondary" id="publications">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
