--- a/_includes/thesis.html
+++ b/_includes/thesis.html
@@ -1,4 +1,4 @@
-<section class="bg-secondary" id="thesis">
+<section class= id="thesis">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
