--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -15,6 +15,7 @@
   {% include team.html %}
   {% include alumni.html %}
   {% include publications.html %}
+  {% include thesis.html %}
   {% include contact.html %}
   {% include scripts.html %}
 </body>
