--- a/_includes/thesis.html
+++ b/_includes/thesis.html
@@ -1,11 +1,17 @@
+<ul>
 <section id="thesis">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">{{ site.subtitle }}</h2>
-                <hr class="light">
-                <p class="text-faded">{{ site.description }}</p>
-            </div>
-        </div>
-    </div>
+  <div class="container">
+    Thesis:
+
+* (ES) Rojas, J. 2016. [Diseño e implementación de una estación terrena en la banda de 2.4 GHz para nanosatélites tipo Cubesat de 2/3U](http://repositorio.uchile.cl/handle/2250/141321). Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.
+* (ES) Vidal, M. 2016. [Desarrollo y evaluación de un sistema de comunicación para un nanosatélite](http://repositorio.uchile.cl/handle/2250/141235). Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.
+* (ES) González, C. 2013. [Diseño e implementación del software de vuelo para un nano-satélite tipo cubesat](http://tesis.uchile.cl/handle/2250/115307). Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.
+* (ES) Opazo, T. 2013. [Requerimientos, implementación y verificación del nano-satélite SUCHAI](http://tesis.uchile.cl/handle/2250/115628). Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.
+* (ES) Derteano, S. 2012. [Aplicación y evaluación de estrategias para control de errores en canales satelitales mediante BICM](http://www.tesis.uchile.cl/handle/2250/111912). Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.
+* (ES) Troncoso, F. 2012. [Evaluación y aplicación de estrategias para control de errores en canales satelitales mediante codificación algebraica](http://www.tesis.uchile.cl/handle/2250/112615). Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.
+* (ES) Rojas, C. 2012. [Modelación estadística de canal satelital para aplicación en microsatélites](http://www.tesis.uchile.cl/handle/2250/112070). Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.
+
+ </div>
 </section>
+
+</ul>
