--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,7 +1,8 @@
 <ul>
 <section id="publications">
   <div class="container">
-    <h2 class="section-heading">Let's Get In Touch!</h2>
+    <div class="row text-center">
+    <h2 class="section-heading">Publications</h2>
     Papers:
 
      <li>J.C. Valdés-Abreu, M.A. Díaz, M Bravo, and Y. Stable-Sanchez, "IonosphericTotal Electron Content Changes during the 15 February 2018 and 30 April 2022 Solar Eclipses over South America and Antarctica", Remote Sensing  Volume 15 Issue 19, 3 October 2023,  EISSN 2072-4292</li>
