--- a/_includes/thesis.html
+++ b/_includes/thesis.html
@@ -14,7 +14,8 @@
 <li>Derteano, S. 2012. Aplicación y evaluación de estrategias para control de errores en canales satelitales mediante BICM http://www.tesis.uchile.cl/handle/2250/111912. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
 <li>Troncoso, F. 2012. Evaluación y aplicación de estrategias para control de errores en canales satelitales mediante codificación algebraica http://www.tesis.uchile.cl/handle/2250/112615. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
 <li>Rojas, C. 2012. Modelación estadística de canal satelital para aplicación en microsatélites (http://www.tesis.uchile.cl/handle/2250/112070)  . Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li> </div>
-
+<li>Rojas, C. 2012. Modelación estadística de canal satelital para aplicación en microsatélites http://www.tesis.uchile.cl/handle/2250/112070 . Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
+  
  </div>
 </section>
 
