--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,6 +5,7 @@
       <h2 class="section-heading">Publications</h2>
       <hr class="primary">
     </div>
+    <div
     Papers:
 
      <li>J.C. Valdés-Abreu, M.A. Díaz, M Bravo, and Y. Stable-Sanchez, "IonosphericTotal Electron Content Changes during the 15 February 2018 and 30 April 2022 Solar Eclipses over South America and Antarctica", Remote Sensing  Volume 15 Issue 19, 3 October 2023,  EISSN 2072-4292</li>
@@ -29,7 +30,7 @@
     </li>C.E. Gonzalez, C.J. Rojas, A. Bergel, M.A. Díaz, "An Architecture-Tracking Approach to Evaluate a Modular and Extensible Flight Software for CubeSat Nanosatellites" IEEE ACCESS ISI/SCOPUS/UCH/VID, 2019, http://dx.doi.org/10.1109/ACCESS.2019.2927931</li>
     <li>M. Martínez-Ledesma, M.A. Díaz, "Determination of the Signal Fluctuation Threshold of the Temperature-Ion Composition Ambiguity Problem Using Monte Carlo Simulations", JOURNAL OF GEOPHYSICAL RESEARCH-SPACE PHYSICS	SCOPUS/ISI/UCH/VID, March 2019, http://dx.doi.org/10.1029/2018JA026217</li>
     <li>T. Toledo, C.Garrido, M.A. Díaz, R. Rondanelli, S. Jorquera, P. Valdivieso, "AOT Retrieval Procedure for Distributed Measurements With Low-Cost Sun Photometers", JOURNAL OF GEOPHYSICAL RESEARCH-ATMOSPHERES	ISI/SCOPUS/UCH/VID, December 2017, http://dx.doi.org/10.1002/2017JD027309</li>
-
+</div>
 
 
  </div>
