--- a/_includes/thesis.html
+++ b/_includes/thesis.html
@@ -13,7 +13,7 @@ li>Díaz Huenupán, F. 2023. Diseño e implementación de un algoritmo para la e
 <li>Opazo, T. 2013. Requerimientos, implementación y verificación del nano-satélite SUCHAI  <a href="httpp://tesis.uchile.cl/handle/2250/115628">. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
 <li>Derteano, S. 2012. Aplicación y evaluación de estrategias para control de errores en canales satelitales mediante BICM  <a href="httpp://www.tesis.uchile.cl/handle/2250/111912">. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
 <li>Troncoso, F. 2012. Evaluación y aplicación de estrategias para control de errores en canales satelitales mediante codificación algebraica  <a href="httpp://www.tesis.uchile.cl/handle/2250/112615">. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
-<li>Rojas, C. 2012. Modelación estadística de canal satelital para aplicación en microsatélites. <a href="httpp://www.tesis.uchile.cl/handle/2250/112070">  . Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li> </div>  
+<li>Rojas, C. 2012. Modelación estadística de canal satelital para aplicación en microsatélites. href="httpp://www.tesis.uchile.cl/handle/2250/112070". Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li> </div>  
  </div>
 </section>
 
