--- a/_includes/thesis.html
+++ b/_includes/thesis.html
@@ -3,7 +3,7 @@
   <div class="container">
     Thesis:
 
-li>Díaz Huenupán, F. 2023. Diseño e implementación de un algoritmo para la estimación de la orientación para nanosatélites en un sistema embebido con restricciones de tiempo real.  <a href="httpps://repositorio.uchile.cl/handle/2250/196755">. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas. </li>
+<li>Díaz Huenupán, F. 2023. Diseño e implementación de un algoritmo para la estimación de la orientación para nanosatélites en un sistema embebido con restricciones de tiempo real.  <a href="httpps://repositorio.uchile.cl/handle/2250/196755">. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas. </li>
 <li>Vidal Valladares, M. 2023. Development and analysis of a localization methodology for femto-satellites using two cubesats in space.   <a href="httpps://repositorio.uchile.cl/handle/2250/195121">.Memory of Doctor in Electrical Engineering. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
 <li>Gutiérrez Russell, S. 2023. Developing and testing an ultra-low-cost star tracker for attitude determinations of nanosatellites. Disponible en  <a href="httpps://repositorio.uchile.cl/handle/2250/194384">. Memory of Doctor in Electrical Engineering. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
 <li>Valdés Abreu, J. 2023. Degradation of the global navigation satellite system positioning accuracy caused by ionospheric disturbance sources.   <a href="httpps://repositorio.uchile.cl/handle/2250/193060">. Memory of Doctor in Electrical Engineering. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
