--- a/_includes/thesis.html
+++ b/_includes/thesis.html
@@ -1,7 +1,12 @@
 <ul>
 <section id="thesis">
   <div class="container">
-    Thesis:
+    <div class="row text-center">
+      <h2 class="section-heading">Thesis</h2>
+      <hr class="primary">
+    </div>
+    <div
+    Papers: Thesis:
 
 <li>Díaz Huenupán, F. 2023. Diseño e implementación de un algoritmo para la estimación de la orientación para nanosatélites en un sistema embebido con restricciones de tiempo real.  <a href="httpps://repositorio.uchile.cl/handle/2250/196755">. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas. </li>
 <li>Vidal Valladares, M. 2023. Development and analysis of a localization methodology for femto-satellites using two cubesats in space.   <a href="httpps://repositorio.uchile.cl/handle/2250/195121">.Memory of Doctor in Electrical Engineering. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
@@ -14,6 +19,7 @@
 <li>Derteano, S. 2012. Aplicación y evaluación de estrategias para control de errores en canales satelitales mediante BICM  <a href="httpp://www.tesis.uchile.cl/handle/2250/111912">. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
 <li>Troncoso, F. 2012. Evaluación y aplicación de estrategias para control de errores en canales satelitales mediante codificación algebraica  <a href="httpp://www.tesis.uchile.cl/handle/2250/112615">. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
 <li>Rojas, C. 2012. Modelación estadística de canal satelital para aplicación en microsatélites. href="httpp://www.tesis.uchile.cl/handle/2250/112070". Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li> </div>  
+ </div>
  </div>
 </section>
 
