--- a/_includes/thesis.html
+++ b/_includes/thesis.html
@@ -15,8 +15,8 @@
 <li>González, C. 2013. Diseño e implementación del software de vuelo para un nano-satélite tipo cubesat. <a href="https://tesis.uchile.cl/handle/2250/115307"> Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
 <li>Opazo, T. 2013. Requerimientos, implementación y verificación del nano-satélite SUCHAI. <a href="https://tesis.uchile.cl/handle/2250/115628"> Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
 <li>Derteano, S. 2012. Aplicación y evaluación de estrategias para control de errores en canales satelitales mediante BICM. <a href="https://www.tesis.uchile.cl/handle/2250/111912"> Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
-<li>Troncoso, F. 2012. Evaluación y aplicación de estrategias para control de errores en canales satelitales mediante codificación algebraica. <a href="https://www.tesis.uchile.cl/handle/2250/112615"> Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
-<li>Rojas, C. 2012. Modelación estadística de canal satelital para aplicación en microsatélites. <a href="https://repositorio.uchile.cl/handle/2250/112070"> Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li> </div>  
+<li>Troncoso, F. 2012. Evaluación y aplicación de estrategias para control de errores en canales satelitales mediante codificación algebraica.<a href="https://repositorio.uchile.cl/handle/2250/1126155"> Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
+<li>Rojas, C. 2012. Modelación estadística de canal satelital para aplicación en microsatélites.<a href="https://repositorio.uchile.cl/handle/2250/112070"> Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li> </div>  
  </div>
  </div>
 </section>
