--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -8,7 +8,7 @@
     <div>
     Papers:
 
-     <li>J.C. Valdés-Abreu, M.A. Díaz, M Bravo, and Y. Stable-Sanchez, "IonosphericTotal Electron Content Changes during the 15 February 2018 and 30 April 2022 Solar Eclipses over South America and Antarctica", Remote Sensing  Volume 15 Issue 19, 3 October 2023,  EISSN 2072-4292 <a href="https://doi.org/10.3390/rs15194810"> https://doi.org/10.3390/rs15194810 </li>
+     <li>J.C. Valdés-Abreu, M.A. Díaz, M Bravo, and Y. Stable-Sanchez, "IonosphericTotal Electron Content Changes during the 15 February 2018 and 30 April 2022 Solar Eclipses over South America and Antarctica", Remote Sensing  Volume 15 Issue 19, 3 October 2023,  EISSN 2072-4292, <a href="https://doi.org/10.3390/rs15194810"> https://doi.org/10.3390/rs15194810 </li>
      <li>A. Avila, M.A. Díaz, F. Pizarro "Circular Polarized 3D-Printed Enclosed Twist Dielectric Resonator Antenna" 2023 IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting (USNC-URSI), Pages 701-702,<a href="http://dx.doi.org/10.1109/USNC-URSI52151.2023.10237529"> http://dx.doi.org/10.1109/USNC-URSI52151.2023.10237529</li>
      <li>S.Díaz, M. A. Díaz, E. Rajo-Iglesias, "Circular polarized 3D-printed cylindrical DRA using parasitic dielectric helix" SCIENTIFIC REPORTS	SCOPUS/UCH/VID, July 2023, http://dx.doi.org/10.1038/s41598-023-39098-2<a href="http://dx.doi.org/10.1038/s41598-023-39098-2"></li>
      <li>J. Pedreros, A. Becerra, J. Rojas, C. Pavez , "Design and Stability Analysis of a Digital Automatic Power Control Based on a PI Controller for Laser Drivers", May 2023, ISI/SCOPUS/UCH/VID, http://dx.doi.org/10.3390/machines11050516</li>
