--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -29,7 +29,7 @@
      <li><a href="http://dx.doi.org/10.1109/ACCESS.2019.2927931">C.E. Gonzalez, C.J. Rojas, A. Bergel, M.A. Díaz, "An Architecture-Tracking Approach to Evaluate a Modular and Extensible Flight Software for CubeSat Nanosatellites" IEEE ACCESS ISI/SCOPUS/UCH/VID, 2019, http://dx.doi.org/10.1109/ACCESS.2019.2927931</li>
      <li><a href="http://dx.doi.org/10.1029/2018JA026217">M. Martínez-Ledesma, M.A. Díaz, "Determination of the Signal Fluctuation Threshold of the Temperature-Ion Composition Ambiguity Problem Using Monte Carlo Simulations", JOURNAL OF GEOPHYSICAL RESEARCH-SPACE PHYSICS	SCOPUS/ISI/UCH/VID, March 2019, http://dx.doi.org/10.1029/2018JA026217</li>
      <li><a href="http://dx.doi.org/10.1002/2017JD027309">F. Toledo, C.Garrido, M.A. Díaz, R. Rondanelli, S. Jorquera, P. Valdivieso, "AOT Retrieval Procedure for Distributed Measurements With Low-Cost Sun Photometers", JOURNAL OF GEOPHYSICAL RESEARCH-ATMOSPHERES	ISI/SCOPUS/UCH/VID, December 2017, http://dx.doi.org/10.1002/2017JD027309</li>
-    <      </p>
+    <div>  < </p></div>      </p>
 </div>
 
 
