--- a/_includes/thesis.html
+++ b/_includes/thesis.html
@@ -16,7 +16,7 @@
 <li><a href="https://repositorio.uchile.cl/handle/2250/115628">Opazo, T. 2013. Requerimientos, implementación y verificación del nano-satélite SUCHAI. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
 <li><a href="https://repositorio.uchile.cl/handle/2250/111912">Derteano, S. 2012. Aplicación y evaluación de estrategias para control de errores en canales satelitales mediante BICM. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
 <li><a href="https://repositorio.uchile.cl/handle/2250/112615">Troncoso, F. 2012. Evaluación y aplicación de estrategias para control de errores en canales satelitales mediante codificación algebraica. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li>
-<li><a href="https://repositorio.uchile.cl/handle/2250/112070">Rojas, C. 2012. Modelación estadística de canal satelital para aplicación en microsatélites. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li> </div>  
+<li><a href="https://repositorio.uchile.cl/handle/2250/112070">Rojas, C. 2012. Modelación estadística de canal satelital para aplicación en microsatélites. Memoria de Ingeniero Civil Eléctrico. Santiago, Universidad de Chile, Facultad de Ciencias Físicas y Matemáticas.</li></a > </div>  
 </a >
   </div>
  </div>
